--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
         <div id="app">
 
             <main class="position-relative d-flex flex-column justify-content-center align-items-center">
-
+                <!-- The main chat container is divided because of the two backgrouds divs -->
                 <div id="main-chat-container">
+
+                    <!-- USER NAME AND ACTIVE CHAT'S LIST -->
                     <div class="chat-left-part">
+                        <!-- USER INFO -->
                         <div class="user-info p-2 d-flex justify-content-between">
                             <div class="d-flex align-items-center">
                                 <img id="user-photo" src="./img/avatar_io.jpg" alt="">
@@ -39,6 +42,7 @@
                                 <i class="fa-solid fa-ellipsis-vertical"></i>
                             </div>
                         </div>
+                        <!-- NOTIFICATIONS' ALERT -->
                         <div class="disable-notifications d-flex align-items-center">
                             <i class="fa-solid fa-bell-slash"></i>
                             <div>
@@ -48,17 +52,27 @@
                                 <a href="#">Attiva notifiche desktop</a>
                             </div>
                         </div>
+                        <!-- CHAT'S LIST -->
                         <div class="chat-list-container">
+
+                            <!-- SEARCH BAR FOR CONTACTS -->
                             <div class="search-bar d-flex align-items-center justify-content-center">
                                 <div class="d-flex align-items-center justify-content-center justify-content-around">
                                     <i class="fa-solid fa-magnifying-glass"></i>
-                                    <input type="text" placeholder="Cerca o inizia una nuova chat" id="">
+                                    <input type="text" placeholder="Cerca o inizia una nuova chat" id=""
+                                    v-model="searchContact" v-on:keyup="searchTheContact">
                                 </div>
                             </div>
+
+                            <!-- LIST OF ALL THE AVAILABLE CHATS -->
                             <ul class="chat-list">
-                                <li class="contact p-2 d-flex align-items-center" v-for="(element, index) in contacts"
+                                <!-- IF THE SEARCH BAR IS EMPTY IT WILL WORK THIS <LI> -->
+                                <li class="contact p-2 d-flex align-items-center"
+                                v-if="searchContact == ''"
+                                v-for="(element, index) in contacts"
                                 @click="getElementActive(index)"
-                                :class="(element.visible === true) ? 'background-grey border border-0' : ''">
+                                :class="(element.visible === true) ? 'background-grey border border-0' : ''"
+                                >
                                     <img :src="'./img/avatar' + element.avatar + '.jpg'" alt="" class="me-2">
                                     <div>
                                         <p class="contact-name">
@@ -67,7 +81,27 @@
                                         <p class="last-message">
                                             {{element.messages[element.messages.length - 1].message}}
                                         </p>
-                                        <span class="time p-2">
+                                        <span class="time p-3">
+                                            {{getTimeFormat(element)}}
+                                        </span>
+                                    </div>
+                                </li>
+                                <!-- IF THE USER TYPES SOMETHING IN THE SEARCH BAR IT WILL WORK THIS <LI> -->
+                                <li class="contact p-2 d-flex align-items-center"
+                                v-if="searchContact !== ''"
+                                v-for="(element, index) in arrayForSearch"
+                                @click="getElementActive(index)"
+                                :class="(element.visible === true) ? 'background-grey border border-0' : ''"
+                                >
+                                    <img :src="'./img/avatar' + element.avatar + '.jpg'" alt="" class="me-2">
+                                    <div>
+                                        <p class="contact-name">
+                                            {{element.name}}
+                                        </p>
+                                        <p class="last-message">
+                                            {{element.messages[element.messages.length - 1].message}}
+                                        </p>
+                                        <span class="time p-3">
                                             {{getTimeFormat(element)}}
                                         </span>
                                     </div>
@@ -77,11 +111,27 @@
                         </div>
                     </div>
 
+                    <!-- PART OF THE WINDOW WITH THE ACTUAL CHAT OF THE SELECTED CONTACT -->
                     <div class="chat-right-part">
-
+                        <!-- INFO ABOUT THE SELECTED CONTACT -->
                         <div class="contact-info-container">
-                            <div class="contact-info p-2 d-flex justify-content-between" v-for="(element, index) in arrayForActiveIndex">
-                                <div class="d-flex">
+                            <div class="contact-info p-2 d-flex justify-content-between">
+                                <div class="d-flex" 
+                                v-if="searchContact == ''"
+                                v-for="(element, index) in arrayForActiveIndex">
+                                    <img :src="'./img/avatar' + element.avatar + '.jpg'" alt="">
+                                    <div class="d-flex flex-column justify-content-center">
+                                        <p class="contact-name m-0">
+                                            {{element.name}}
+                                        </p>
+                                        <span>
+                                            Ultimo accesso oggi alle {{getTimeFormat(element)}}
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="d-flex" 
+                                v-if="searchContact !== ''"
+                                v-for="(element, index) in arrayForSearch">
                                     <img :src="'./img/avatar' + element.avatar + '.jpg'" alt="">
                                     <div class="d-flex flex-column justify-content-center">
                                         <p class="contact-name m-0">
@@ -100,13 +150,24 @@
                                 </div>
                             </div>
                         </div>
-
+                        <!-- CHAT ABOUT THE SELECTED CONTACT -->
                         <div class="chat-container">
                             <div class="chat">
                                 <div class="message-container">
                                     <div class="sent-message-container">
                                         <ul>
-                                            <template v-for="(element, index) in arrayForActiveIndex">
+                                            <template
+                                            v-if="searchContact == ''"
+                                            v-for="(element, index) in arrayForActiveIndex">
+                                            <li v-for="(element, index) in element.messages"
+                                            :class="(element.status == 'sent') ? 'sent-message col-5 offset-7' : 'received-message col-5' "
+                                            >
+                                            {{element.message}}
+                                            </li>
+                                            </template>
+                                            <template
+                                            v-if="searchContact !== ''"
+                                            v-for="(element, index) in arrayForSearch">
                                             <li v-for="(element, index) in element.messages"
                                             :class="(element.status == 'sent') ? 'sent-message col-5 offset-7' : 'received-message col-5' "
                                             >
@@ -125,6 +186,7 @@
                         </div>
                     </div>
                 </div>
+
 
                 <div class="upper-background"></div>
                 <div class="lower-background"></div>
