fix getElementActive function

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 <li class="contact p-2 d-flex align-items-center"
                                 v-if="searchContact !== ''"
                                 v-for="(element, index) in arrayForSearch"
-                                @click="getElementActive(index)"
+                                @click="getElementActiveSearch(index)"
                                 :class="(element.visible === true) ? 'background-grey border border-0' : ''"
                                 >
                                     <img :src="'./img/avatar' + element.avatar + '.jpg'" alt="" class="me-2">
@@ -116,29 +116,31 @@
                         <!-- INFO ABOUT THE SELECTED CONTACT -->
                         <div class="contact-info-container">
                             <div class="contact-info p-2 d-flex justify-content-between">
+                                <!-- IF THE SEARCH BAR IS EMPTY IT WILL WORK THIS <DIV> -->
                                 <div class="d-flex" 
                                 v-if="searchContact == ''"
-                                v-for="(element, index) in arrayForActiveIndex">
-                                    <img :src="'./img/avatar' + element.avatar + '.jpg'" alt="">
+                                >
+                                    <img :src="'./img/avatar' + contacts[activeIndex].avatar + '.jpg'" alt="">
                                     <div class="d-flex flex-column justify-content-center">
                                         <p class="contact-name m-0">
-                                            {{element.name}}
+                                            {{contacts[activeIndex].name}}
                                         </p>
                                         <span>
-                                            Ultimo accesso oggi alle {{getTimeFormat(element)}}
+                                            Ultimo accesso oggi alle {{getTimeFormat(contacts[activeIndex])}}
                                         </span>
                                     </div>
                                 </div>
+                                <!-- IF THE USER TYPES SOMETHING IN THE SEARCH BAR IT WILL WORK THIS <DIV> -->
                                 <div class="d-flex" 
                                 v-if="searchContact !== ''"
-                                v-for="(element, index) in arrayForSearch">
-                                    <img :src="'./img/avatar' + element.avatar + '.jpg'" alt="">
+                                >
+                                    <img :src="'./img/avatar' + arrayForSearch[activeIndex].avatar + '.jpg'" alt="">
                                     <div class="d-flex flex-column justify-content-center">
                                         <p class="contact-name m-0">
-                                            {{element.name}}
+                                            {{arrayForSearch[activeIndex].name}}
                                         </p>
                                         <span>
-                                            Ultimo accesso oggi alle {{getTimeFormat(element)}}
+                                            Ultimo accesso oggi alle {{getTimeFormat(arrayForSearch[activeIndex])}}
                                         </span>
                                     </div>
                                 </div>
@@ -158,8 +160,8 @@
                                         <ul>
                                             <template
                                             v-if="searchContact == ''"
-                                            v-for="(element, index) in arrayForActiveIndex">
-                                            <li v-for="(element, index) in element.messages"
+                                            >
+                                            <li v-for="(element, index) in contacts[activeIndex].messages"
                                             :class="(element.status == 'sent') ? 'sent-message col-5 offset-7' : 'received-message col-5' "
                                             >
                                             {{element.message}}
@@ -167,8 +169,8 @@
                                             </template>
                                             <template
                                             v-if="searchContact !== ''"
-                                            v-for="(element, index) in arrayForSearch">
-                                            <li v-for="(element, index) in element.messages"
+                                            >
+                                            <li v-for="(element, index) in arrayForSearch[activeIndex].messages"
                                             :class="(element.status == 'sent') ? 'sent-message col-5 offset-7' : 'received-message col-5' "
                                             >
                                             {{element.message}}
