--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                                 <!-- IF THE USER TYPES SOMETHING IN THE SEARCH BAR IT WILL WORK THIS <LI> -->
                                 <li class="contact p-2 d-flex align-items-center"
                                 v-if="searchContact !== ''"
-                                v-for="(element, index) in arrayForSearch"
-                                @click="getElementActiveSearch(index)"
-                                :class="(element.visible === true) ? 'background-grey border border-0' : ''"
+                                v-for="(element, index) in contacts"
+                                @click="getElementActive(index)"
+                                :class="(element.visible !== true) ? 'd-none' : ''"
                                 >
                                     <img :src="'./img/avatar' + element.avatar + '.jpg'" alt="" class="me-2">
                                     <div>
@@ -134,13 +134,13 @@
                                 <div class="d-flex" 
                                 v-if="searchContact !== ''"
                                 >
-                                    <img :src="'./img/avatar' + arrayForSearch[activeIndex].avatar + '.jpg'" alt="">
+                                    <img :src="'./img/avatar' + contacts[activeIndex].avatar + '.jpg'" alt="">
                                     <div class="d-flex flex-column justify-content-center">
                                         <p class="contact-name m-0">
-                                            {{arrayForSearch[activeIndex].name}}
+                                            {{contacts[activeIndex].name}}
                                         </p>
                                         <span>
-                                            Ultimo accesso oggi alle {{getTimeFormat(arrayForSearch[activeIndex])}}
+                                            Ultimo accesso oggi alle {{getTimeFormat(contacts[activeIndex])}}
                                         </span>
                                     </div>
                                 </div>
@@ -170,7 +170,7 @@
                                             <template
                                             v-if="searchContact !== ''"
                                             >
-                                            <li v-for="(element, index) in arrayForSearch[activeIndex].messages"
+                                            <li v-for="(element, index) in contacts[activeIndex].messages"
                                             :class="(element.status == 'sent') ? 'sent-message col-5 offset-7' : 'received-message col-5' "
                                             >
                                             {{element.message}}
